Added gitignore file.

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
             data-redirecturi="postmessage"
             dat-accesstype="offline"
             data-cookiepolicy="single_host_origin"
-            data-callback="singlCallback"
+            data-callback="signInCallback"
             dat-approvalprompt="force"
         >
         </span>
