--- a/templates/login.html
+++ b/templates/login.html
@@ -1,52 +1,67 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer></script>
-</head>
-<body>
-    <div id="signinButton">
-        <span
-            class="g-signin"
-            data-scope="openid email"
-            data-redirecturi="postmessage"
-            dat-accesstype="offline"
-            data-cookiepolicy="single_host_origin"
-            data-callback="signInCallback"
-            dat-approvalprompt="force"
-        >
-        </span>
-    </div>
-    <div id="result"></div>
-    <script>
-        function signInCallback(authResult){
-            if(authResult['code']){
-                $('#signinButton').attr('style', 'display:none');
-                $.ajax({
-                    type: 'POST',
-                    url: '/gconnect?state{{STATE}}',
-                    processData: false,
-                    contentType: 'application/octet-stream; charset=utf-8',
-                    data: authResult['code'],
-                    success: function(result){
-                        if(result){
-                            $('#result').html('Login Successful!<br/>' + result + '<br/>Redirecting...')
-                            setTimeout(function(){
-                                window.location.href = "/restaurant";
-                            }, 4000 );
-                        } else if(authResult['error']){
-                            console.log("There was an error loggin in: " + authResult['error']);
-                        } else {
-                            $('#result').html('Failed to make a serverside call. Check your configuration and console.');
-                        }
-                    }
-                });
-            }
-        }
+
+    <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
+     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
     </script>
-</body>
-</html>
+  
+  <script src="//apis.google.com/js/platform.js?onload=start"> </script>
+  
+  <!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
+  
+  
+  </head>
+  
+  
+  <body>
+  
+  
+  <!-- GOOGLE PLUS SIGN IN-->
+  
+  
+            <div id="signinButton">
+            <span class="g-signin"
+              data-scope="openid email"
+              data-clientid="992130204778-1v1snit75rrg87a3pmbou6lfpgfojlrl.apps.googleusercontent.com"
+              data-redirecturi="postmessage"
+              data-accesstype="offline"
+              data-cookiepolicy="single_host_origin"
+              data-callback="signInCallback"
+              data-approvalprompt="force">
+            </span>
+          </div>
+  
+  <div id="result"></div>
+  
+  <script>
+  function signInCallback(authResult) {
+    if (authResult['code']) {
+      // Hide the sign-in button now that the user is authorized
+      $('#signinButton').attr('style', 'display: none');
+      // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
+      $.ajax({
+        type: 'POST',
+        url: '/gconnect?state={{STATE}}',
+        processData: false,
+        data: authResult['code'],
+        contentType: 'application/octet-stream; charset=utf-8',
+        success: function(result) {
+          // Handle or verify the server response if necessary.
+          if (result) {
+            $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+           setTimeout(function() {
+            window.location.href = "/restaurant";
+           }, 4000);
+        } else if (authResult['error']) {
+      console.log('There was an error: ' + authResult['error']);
+    } else {
+          $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+           }
+        }
+    }); } }
+  </script>
+  
+  
+  
+  <!--END GOOGLE PLUS SIGN IN -->
+  </html>
