--- a/templates/publicrestaurants.html
+++ b/templates/publicrestaurants.html
@@ -3,7 +3,11 @@
 	<div class="row top-menu">
 		<div class="col-md-10"></div>
 		<div class="col-md-2 text-right">
-			<a href="{{url_for('showLogin')}}">Click Here to Log in </a>
+			{% if 'username' not in session %}
+				<a href="{{url_for('showLogin')}}">Log In</a>
+			{% else %}
+				<a href="{{url_for('disconnect')}}">Logout</a>
+			{% endif%}
 		</div>
 	</div>
 	<div class="row divider blue">
